@@ -28,9 +28,9 @@
 #endif
 
 #define  _(String) dgettext (GETTEXT_PACKAGE, String)
-#define Q_(String) g_dpgettext (GETTEXT_PACKAGE, String, NULL)
+#define Q_(String) g_dpgettext (GETTEXT_PACKAGE, String, 0)
 #define N_(String) (String)
-#define C_(Context,String) g_dpgettext (GETTEXT_PACKAGE, Context "\004" String, String)
+#define C_(Context,String) g_dpgettext (GETTEXT_PACKAGE, Context "\004" String, strlen (Context) + 1)
 
 
 #endif  /* __G_I18N_LIB_H__ */
